--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/application.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <img src="images/slot_banner.jpg" alt="">
+        <picture>
+        <source srcset="images/pixar.webp" type="image/webp">
+        <source srcset="images/pixar.jpg" type="image/jpeg"> 
+        <img src="images/pixar.jpg" alt="Alt Text!">
+        </picture>
     </div>
      <!-- <div class="nouse"></div>  -->
 </body>
